# test_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  google_test.cpp  llvm-gcov.sh  main.cpp  test_simple.cpp  test_simple.h
cmake/: conf.cmake
tests/: CMakeLists.txt
